--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
         go-version: 1.19
 
     - name: Build
-      run: go build -v ./...
+      run: go build -v main.go deck.go deck_test.go
 
     - name: Test
-      run: go test -v ./...
+      run: go test -v main.go deck.go deck_test.go
