--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -4,25 +4,27 @@
 name: Go
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    push:
+        branches: ["main"]
+    pull_request:
+        branches: ["main"]
 
 jobs:
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
 
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
+            - name: Set up Go
+              uses: actions/setup-go@v3
+              with:
+                  go-version: 1.19
 
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: 1.19
+            - name: Build
+              run: go build main.go deck.go deck_test.go
 
-    - name: Build
-      run: go build -v main.go deck.go deck_test.go
+            - name: Test
+              run: go test main.go deck.go deck_test.go
 
-    - name: Test
-      run: go test -v main.go deck.go deck_test.go
+            - name: Run
+              run: go run main.go deck.go deck_test.go
